[package]
name = "porcupine"
version = "0.1.0"
edition = "2018"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.42.0"
default-features = false
features = [
    "Win32_Foundation", 
    "Win32_Graphics_Gdi", 
    "Win32_Security",
    "Win32_System_LibraryLoader", 
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging", 
]

[target.'cfg(windows)'.dependencies]
blood-geometry = { path = "../flour/geometry" }
bitflags = "1.3.2"
cfg-if = "1.0.0"
event-listener = { version = "2.5.3", default-features = false }
futures-lite = { version = "1.12.0", default-features = false }
raw-window-handle = { version = "0.5.0", optional = true, default-features = false }
tracing = { version = "0.1.37", default-features = false }

[build-dependencies]
autocfg = "1.1.0"

[dev-dependencies]
async-io = "1.12.0"
